# Tauri-PDF-Editor

./: README.md  copy-demo-pdf.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.css  App.tsx
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  dialog.rs  fs.rs  lib.rs  main.rs  pdf.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/pdf/: form.rs  mod.rs
src/components/: FormElementProperties.tsx  FormElementRenderer.tsx  FormElementToolbar.tsx  FormFieldEditor.tsx  FormValidationErrors.tsx  FormValidationRules.tsx  Layout.tsx  PdfCanvasRenderer.tsx  PdfFormGenerator.tsx  PdfViewer.tsx  PropertiesPanel.tsx  Sidebar.tsx  ThemeToggle.tsx  TitleBar.tsx  Toolbar.tsx
src/components/form-elements/: BaseFormElement.tsx  Checkbox.tsx  Dropdown.tsx  SignatureField.tsx  TextField.tsx  index.ts
src/contexts/: FormDataContext.tsx  FormElementContext.tsx  PdfContext.tsx  ThemeContext.tsx
src/lib/: FormDataManager.ts  FormElementManager.ts  PdfFormFieldGenerator.ts  commands.ts  coordinates.ts  zIndex.ts
src/services/: pdfRenderingService.ts  pdfService.ts
src/styles/: index.css  layout.css  theme.css
