[package]
name = "pdf-editor"
version = "0.0.0"
description = "A Tauri PDF Form Editor"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pdf_form_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lopdf = "0.31.0"  # For PDF parsing and manipulation
base64 = "0.21.0" # For encoding/decoding binary data
thiserror = "1.0" # For error handling
tokio = { version = "1.28.0", features = ["full"] } # Async runtime
tempfile = "3.5.0" # For temporary file management
log = "0.4.17"     # Logging
env_logger = "0.10.0" # Logging implementation
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-shell = "2.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

